Versão final.